[package]
name = "forceframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24"
winit = "0.28"
rand = "0.8"
rand_chacha = "0.3"
sfml = "0.20"
rsevents-extra = "0.2.1"
firestorm = { version = "0.5.1", features = ["enable_system_time"] }
tracing-tracy = "0.10.2"

[profile.release]
debug = true
